# precious-metal

./: .gitignore  01_construct_futures_spot_daily_returns.ipynb  02_iceemdan_gmm_rln_reconstruction.ipynb  03_visualize_precious_metals_prices_returns.ipynb  04_r2_decomposed_connectedness_hierarchical_ward.ipynb  06_lagged_r2g_granger_directionality.ipynb  08_tci_external_driver_factor_analysis.ipynb  Multiscale risk spillovers and external driving factors Evidence from the global futures and spot markets of staple foods.md  README.md  main.ipynb  main.py  precious_metals_research_plan_data_audit.md  pyproject.toml  staple_food_risk_spillovers_bilingual_core.md
article/: body.tex  main.aux  main.out  main.tex
data/: gpr_daily_latest.xlsx
data/csv/: EPU_7days.csv  Gold Futures Historical Data.csv  Palladium Futures Historical Data.csv  Platinum Futures Historical Data.csv  Silver Futures Historical Data.csv  T10YIE_2026.csv  us-dollar-index.csv  us-inflation-expectations-10y.csv  vix-index.csv  wti-crude-oil.csv  xagusd_d.csv  xauusd_d.csv  xpdusd_d.csv  xptusd_d.csv  工业生产指数.csv
data/precious_metals_driver_csv_package/: ICE-BofA-US-High-Yield-Index-Option-Adjusted-Spread(BAMLH0A0HYM2).csv  Palladium supply demand history May 2025.xlsx  Platinum supply demand history May 2025.xlsx  St.-Louis-Fed-Financial-Stress-Index(STLFSI4).csv  download_status.csv  feature_daily_merged_2012_2026.csv  (+14 more)
notebooks/: 02_iceemdan_hierarchical_ward_reconstruction.ipynb  04_r2_decomposed_connectedness_hierarchical_ward.ipynb  05_strict_r2g_decomposed_connectedness_hierarchical_ward.ipynb
(+115 files in other folders)
