[project]
name = "precious-metal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "emd-signal>=1.9.0",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "numpy>=2.4.4",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pyarrow>=24.0.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "statsmodels>=0.14.6",
]

[tool.uv.workspace]
members = [
    "precious-metals-risk",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.6",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
]
